--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body form.form {
+	position: relative;	
+	padding-bottom: 100px;
+}
 body form.form p.form-field label.field-label {
 	text-align: left !important;
 	float: none !important;
@@ -6,6 +10,10 @@ body form.form p.form-field label.field-label {
 body form.form p.form-field.required {
 	font-weight: 400 !important;
 
+}
+body form.form p.form-field select {
+	width: 100%;
+	max-width: 100%;
 }
 body form.form input {
 	background-color: #ffffff !important;
