--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body form.form p.form-field label.field-label {
 	float: none !important;
 	width: 100% !important;
 	color: white !important;
+	text-shadow: 0 0 3px black !important;
 }
 body form.form p.form-field.required {
 	font-weight: 400 !important;
